# moose-irc2

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  main.go  stdiorwc.go
bot/: Cargo.toml
bot/src/: config.rs  handler.rs  helpers.rs  main.rs  webreq.rs
bot/src/handlers/: handler.rs  ircstate.rs  mod.rs  moosecmd.rs
bot/src/tasks/: fetcher.rs  invite.rs  mod.rs  receiver.rs  sender.rs  shutdown.rs
botstuff/: botstuff.go  handlers.go  helpers.go  parse.go  resolver.go
config/: config.go  duration.go  example.json  openers.go
contrib/etc/systemd/system/: moose-irc2.service  moose-irc2@.service
irc/: Cargo.toml  README.md
irc/proto/: Cargo.toml
irc/proto/src/: command.rs  parse.rs
irc/src/: codec.rs  connection.rs  iter.rs  lib.rs  parse.rs
irc/src/client/: mod.rs
irc/src/connection/: tls.rs
