[package]
name = "bot"
version = "0.1.0"
edition = "2021"
description = "IRC Bot for Moose2."
authors = ["Anthony DeDominic"]
license = "BSD-2-Clause"

[dependencies]
clap = { version = "=4.5.24", features = ["derive"] }
# futures = "0.3"
# irc = { path = "../irc" }
irc = { path = "../irc" }
rand = { version = "0.8.5", features = ["std", "std_rng"], default-features = false }
rustls = "0.23.21"

# reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tokio = { version = "1", default-features = false, features = ["rt", "net", "macros", "io-util", "fs"] }
# tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
thiserror = "2"
ureq = { version = "2.12.1", default-features = false, features = ["tls"] }
webpki-roots = "0.26.7"
