[package]
name = "moose-irc2"
version = "0.1.0"
edition = "2021"
description = "IRC Bot for Moose2."
authors = ["Anthony DeDominic"]
license = "BSD-2-Clause"

[dependencies]
clap = { version = "=4.5.24", features = ["derive"] }
futures = "0.3"
irc = { path = "../irc" }
percent-encoding = "2"
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
leaky-bucket = "1.1.2"
tokio = { version = "1", default-features = false, features = ["rt", "net", "macros", "io-util", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
thiserror = "2"
webpki-roots = "0.26.7"
